[gd_scene load_steps=2 format=3 uid="uid://bboyiiiqctgln"]

[ext_resource type="Script" path="res://ui/in_game_ui.gd" id="1_qsgcy"]

[node name="InGameUi" type="CanvasLayer"]
script = ExtResource("1_qsgcy")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Health" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Health"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "HEALTH:"

[node name="HealthValue" type="Label" parent="MarginContainer/HBoxContainer/Health"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "10"

[node name="StatusHandle" type="Control" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="StatusText" type="Label" parent="MarginContainer/StatusHandle"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -38.5
offset_right = 75.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 56
text = "DEAD"
